galley/testdata/conversion/dataset/extensions/v1beta1/ingress_basic_expected.json
{
  "istio/networking/v1alpha3/gateways": [
    {
      "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.Gateway",
      "Metadata": {
        "name": "istio-system/foo-istio-autogenerated-k8s-ingress"
      },
      "Body": {
        "selector": {
          "istio": "ingress"
        },
        "servers": [
          {
            "hosts": [
              "*"
            ],
            "port": {
              "name": "http-80-i-foo-{{.Namespace}}",
              "number": 80,
              "protocol": "HTTP"
            }
          }
        ]
      }
    }
  ],

  "istio/networking/v1alpha3/virtualservices": [
  ]
}
