galley/testdata/conversion/dataset/extensions/v1beta1/ingress_multihost_expected.json
{
    "istio/networking/v1alpha3/gateways": [
        {
            "Metadata": {
                "name": "istio-system/echo-istio-autogenerated-k8s-ingress"
            },
            "Body": {
                "selector": {
                    "istio": "ingress"
                },
                "servers": [
                    {
                        "hosts": [
                            "*"
                        ],
                        "port": {
                            "name": "http-80-i-echo-{{.Namespace}}",
                            "number": 80,
                            "protocol": "HTTP"
                        }
                    }
                ]
            },
            "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.Gateway"
        }
    ],
    "istio/networking/v1alpha3/virtualservices": [
        {
            "Metadata": {
                "name": "istio-system/echo1-example-com-echo-istio-autogenerated-k8s-ingress"
            },
            "Body": {
                "gateways": [
                    "istio-autogenerated-k8s-ingress"
                ],
                "hosts": [
                    "echo1.example.com"
                ],
                "http": [
                    {
                        "match": [],
                        "route": [
                            {
                                "destination": {
                                    "host": "echo1.{{.Namespace}}.svc.cluster.local",
                                    "port": {
                                        "number": 80
                                    }
                                },
                                "weight": 100
                            }
                        ]
                    }
                ]
            },
            "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.VirtualService"
        },
        {
            "Metadata": {
                "name": "istio-system/echo2-example-com-echo-istio-autogenerated-k8s-ingress"
            },
            "Body": {
                "gateways": [
                    "istio-autogenerated-k8s-ingress"
                ],
                "hosts": [
                    "echo2.example.com"
                ],
                "http": [
                    {
                        "match": [],
                        "route": [
                            {
                                "destination": {
                                    "host": "echo2.{{.Namespace}}.svc.cluster.local",
                                    "port": {
                                        "number": 80
                                    }
                                },
                                "weight": 100
                            }
                        ]
                    }
                ]
            },
            "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.VirtualService"
        }
    ]
}
